--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.31.1
-  firebase_analytics: ^10.10.6
+  firebase_core: ^2.32.0
+  firebase_analytics: ^10.10.7
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
   cupertino_icons: ^1.0.8
 
 
