--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.5
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
