--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  form_field_validator: ^1.1.0
 
 
 dev_dependencies:
