Finishing register.dart 1

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx4G -Duser.country=TH -Duser.language=th
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8=true
