Add register_button.dart @ register_page.dart

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,8 @@ if (flutterVersionName == null) {
 }
 
 android {
+    compileSdkVersion 35
+
     namespace "com.caesar.workmai.workmai"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
