--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.0.0
-  firebase_analytics: ^11.0.0
-  firebase_auth: ^5.0.0
-  cloud_firestore: ^5.0.0
+  firebase_core: ^3.1.0
+  firebase_analytics: ^11.0.1
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.1
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   form_field_validator: ^1.1.0
+  firebase_database: ^11.0.1
 
 
 dev_dependencies:
