--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   form_field_validator: ^1.1.0
   firebase_database: ^11.0.1
+  provider: ^6.1.2
 
 
 dev_dependencies:
