--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   form_field_validator: ^1.1.0
   firebase_database: ^11.0.1
   provider: ^6.1.2
+  multi_select_flutter: ^4.0.0
 
 
 dev_dependencies:
