--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.1.0
 
+  firebase_app_check: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
