--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/
+    - pubspec.yaml
 
   # To add assets to your application, add an assets section, like this:
   # assets:
