--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   provider: ^6.1.2
   multi_select_flutter: ^4.1.3
   image_picker: ^1.1.2
-  firebase_storage: ^12.1.0
-  firebase_app_check: ^0.3.0+2
+  firebase_storage: ^12.1.1
+  firebase_app_check: ^0.3.0+3
+  shared_preferences: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
