--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.1.1
-  firebase_analytics: ^11.1.0
-  firebase_auth: ^5.1.1
-  cloud_firestore: ^5.0.2
+  firebase_core: ^3.2.0
+  firebase_analytics: ^11.2.0
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   form_field_validator: ^1.1.0
-  firebase_database: ^11.0.2
+  firebase_database: ^11.0.3
   provider: ^6.1.2
   multi_select_flutter: ^4.1.3
   image_picker: ^1.1.2
-  firebase_storage: ^12.1.0
-  firebase_app_check: ^0.3.0+2
+  firebase_storage: ^12.1.1
+  firebase_app_check: ^0.3.0+3
+  shared_preferences: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
