--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^12.1.1
   firebase_app_check: ^0.3.0+3
   shared_preferences: ^2.2.3
+  cloud_functions: 5.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
