--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,7 @@
 {
-  "main": "lib/index.js",
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
+  "main": "index.js",
   "scripts": {
     "start": "npm run shell",
     "build": "tsc",
@@ -7,14 +9,15 @@
     "lint": "eslint --ext .js,.ts .",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions:matchUsers",
     "logs": "firebase functions:log"
   },
-  "name": "functions",
   "engines": {
     "node": "18"
   },
   "dependencies": {
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1",
     "@genkit-ai/ai": "^0.5.3",
     "@genkit-ai/core": "^0.5.3",
     "@genkit-ai/dotprompt": "^0.5.3",
@@ -22,8 +25,6 @@
     "@genkit-ai/flow": "^0.5.3",
     "@genkit-ai/googleai": "^0.5.3",
     "express": "^4.19.2",
-    "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
