--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_app_check: ^0.3.0+3
   shared_preferences: ^2.2.3
   cloud_functions: 5.0.3
+  badges: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
